tests/sumo/extended/simulation_routing/personTrip/errors/testsuite.sumo
# public transport via bustops
flow_without_end
